# portfolio-mvc

./: .gitignore  Dockerfile  ProcFile  Procfile  demo_settings.env  manage.py  pyproject.toml  requirements.txt
compress/CACHE/: manifest.json
portfolio/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_project.py  0003_auto_20210819_0938.py
portfolio_mvc/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
static/css/: index.css
templates/portfolio/: index.html
