[tool.poetry]
name = "portfolio_mvc"
version = "0.1.0"
description = ""
authors = ["Ajawu David <ajawudavid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "~=3.1.4"
Brotli = "~=1.0.9"
beautifulsoup4 = "~=4.9.3"
celery = "~=5.0.5"
Pillow = "~=8.1.2"
python-decouple = "^3.4"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
